[package]
name = "ip-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
pnet = "0.34"
rand = "0.8"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
