[package]
name = "ip-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
pnet_packet = "0.34"
pnet_transport = "0.34"
pnet_datalink = "0.34"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
maxminddb = { version = "0.23", features = ["mmap"] }
whois-rust = "1.5"
regex = "1.10"
actix-web = { version = "4.5", default-features = false, features = ["macros"] }
actix-cors = "0.7"
utoipa = { version = "4.2", default-features = false }
actix-files = "0.6.9"


[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
